# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  flake.nix  rust-toolchain  shell.nix  spec.yaml
.github/workflows/: rust.yml
.sqlx/: query-4bd6bbade521cd577279e91d8a8b978748046beff031d153699b351089c3bf9b.json  query-cf7c831eef710e15c7cdf02190ede59431a82eb071c56d1c5982c5d82814f2a9.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240415174249_create_subscriptions_table.sql  20240427134415_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  send_email.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
